code/infrastructure/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
  generation: 1
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: navbar.ch 
    http:
      paths:
      - backend:
          service:
            name: app
            port:
              name: http
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: app-ui
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - navbar.ch
    secretName: ${PROJECT_NAME}-${ENVIRONMENT}-tls
